Changelog for Shake

    Add shakeArguments
    Rename shakeWithArgs to shakeWithClean
    Remove the -f alias for --flush
    Add a shake executable which runs Makefiles
    Rename shake to shake-test
    Change how progress messages are written
    Do not write a beep in progressDisplay, avoids a beep
    Add exe function to FilePath
0.9.1
    GHC head (7.7) compatibility by removing the Rules fundep
0.9
    Make the tests work on Linux
    Fix report generation on machines whose text format is not ASCII
    Make Directory functions work the same on Linux/Mac
    Change shakeVersion to be a String
    Stop alwaysRerun causing lint failures
    Make shakeLint check that the current directory does not change
    Add shakeOutput setting
    Add removeFiles function
    Add Sys module for writing consise system calls
    Add getEnv function
    Add shakeWithArgs and shakeOptDescrs
    Add newCache to cache the parsed contents of files
    Add newResourceIO and move newResource into the Rules monad
    Add shakeStorageLog, to help diagnosing obscure database errors
0.8
    Improve the Oracle documentation
    Allow getDirectoryFiles to operate recursively
0.7
    Change getDirectoryFiles to take a set of file patterns
    Add doesDirectoryExist function
    Add shakeAbbreviations feature
    Add a new Progress module for sensible progress messages
    Spawn shakeProgress on a separate thread, a safer default
    Improve the runtime error messages
    Add a quietly function, to hide traced commands
    Print main status messages when running a traced command
    Display the exit code when a system command fails
    Fix AssumeClean when the result exists but has never been built
    IMPORTANT: Incompatible on disk format change
    Change the storage to not write messages on --silent
    Add Applicative on Rules
    Add Applicative on Action
0.6
    Make addOracle return a result of askOracle
    Export the class bodies from Classes